// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Reducer should match snapshot 1`] = `
Object {
  "error": null,
  "isLoading": false,
}
`;

exports[`App Reducer should perform ClearData action 1`] = `
Object {
  "error": null,
  "isLoading": false,
}
`;

exports[`App Reducer should perform ClearError action 1`] = `
Object {
  "error": null,
  "isLoading": false,
}
`;

exports[`App Reducer should perform FinishedLoading action 1`] = `
Object {
  "error": null,
  "isLoading": false,
}
`;

exports[`App Reducer should perform IsLoading action 1`] = `
Object {
  "error": null,
  "isLoading": true,
}
`;

exports[`App Reducer should perform SetError action 1`] = `
Object {
  "error": undefined,
  "isLoading": false,
}
`;
